--- a/src/scss/components/_data-tables.scss
+++ b/src/scss/components/_data-tables.scss
@@ -160,6 +160,7 @@ $triangle-size: 8px;
   .data-table__issue__item {
     display: none;
     position: absolute;
+    z-index: 10;
     top: calc(100% - 1px);
     left: -1px;
     padding: 5px;
